<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/iteSearch"
    android:title="@string/Title_Search"
    android:icon="@drawable/ic_search"
    app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/iteReset"
        android:title="@string/Title_Reset"
        android:icon="@drawable/refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_help"
        android:title="@string/Title_Help"
        android:icon="@drawable/ic_help"
        app:showAsAction="ifRoom"/>
    <item
    android:id="@+id/idtransparent"
    android:title="@string/iteTransparent"
    />
    <item
        android:id="@+id/idSemitransparent"
        android:title="@string/iteSemitransparent"
        />
    <item
        android:id="@+id/idOpaco"
        android:title="@string/iteOpaque"
        />
    <item
        android:id="@+id/idBlack"
        android:title="@string/iteBlack"
        />
    <item
        android:id="@+id/idWhite"
        android:title="@string/iteWhite"
        />
    <item
        android:id="@+id/idGreen"
        android:title="@string/iteGreen"
        />
    <item
        android:id="@+id/idBlue"
        android:title="@string/iteBlue"
        />
    <item
        android:id="@+id/idCian"
        android:title="@string/iteCian"
        />
    <item
    android:id="@+id/idYellow"
    android:title="@string/iteYellow"
    />
    <item
        android:id="@+id/idMagenta"
        android:title="@string/iteMagenta"
        />
    <item
        android:id="@+id/idBrown"
        android:title="@string/iteBrown"
        />
    <item
        android:id="@+id/itemAboutOf"
        android:title="@string/Title_aboutOf"
        />
    <item
        android:id="@+id/item_exit"
        android:title="@string/Title_Exit"
        />

</menu>