<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/lbl_red" />

            <SeekBar
                android:id="@+id/sbrRed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:progress="0"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="26dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:text="@string/lbl_green" />

            <SeekBar
                android:id="@+id/sbrGreen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:progress="0"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lbl_blue" />

            <SeekBar
                android:id="@+id/sbrBlue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:progress="0"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="26dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/lbl_alpha" />

            <SeekBar
                android:id="@+id/sbrAlpha"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:progress="0"
                android:layout_weight="1" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/vieColors"
                android:layout_width="wrap_content"
                android:layout_height="456dp"
                android:background="@drawable/paisaje" />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>